--- a/src/Makefile
+++ b/src/Makefile
@@ -1,25 +1,15 @@
-PLATFORM_GCW=1
+#CFLAGS := -c -flto -O2 -Wall $(shell pkg-config --cflags sdl2 SDL2_image SDL2_mixer SDL2_gfx)
+#CFLAGS=-c -O2 -Wall -g -pg
+CFLAGS=-c -flto -O2 -Wall
 
-#CFLAGS=-O0 -c -g -Wall
-CFLAGS=-c -flto -O3 -Wall
+
+LIBS := $(shell pkg-config --libs sdl SDL_image SDL_mixer SDL_gfx ogg vorbis vorbisfile)
 
 LDFLAGS=
 
-#GP2X:
-#GPLDFLAGS=-L/opt/open2x/gcc-4.1.1-glibc-2.3.6/lib -Wl,-rpath,/opt/open2x/gcc-4.1.1-glibc-2.3.6/lib \
-#		-static -lSDL_gfx -lSDL_image -ljpeg -lpng12 -lz -lSDL_mixer -lmikmod -lvorbisidec -lmad -lSDL \
-#		 -lpthread -lgcc -lm -lc -ldl -msoftfloat
-#GCW (debug):
-#GPLDFLAGS=-L/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/lib -Wl,-rpath,/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/lib \
-#		-lSDL_image -lSDL_gfx -ljpeg -lpng14 -lz -lSDL_mixer -lvorbisidec -lvorbisfile -lvorbis -lSDL \
-#		 -lpthread -lgcc -lm -lc  
-#GCW (optimized)
-GPLDFLAGS=-flto -O3 -L/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/lib -Wl,-rpath,/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/lib \
-		-lSDL_image -lSDL_gfx -ljpeg -lpng14 -lz -lSDL_mixer -lvorbisidec -lvorbisfile -lvorbis -lSDL \
-		 -lpthread -lgcc -lm -lc  
-
-#PCLDFLAGS=-L/usr/lib -Wl,-rpath,/usr/lib -lSDL -lpthread -lSDL_gfx -lSDL_image -lz -lpng12 -lSDL_mixer \
-#		 -lmikmod  -lgcc 
+PCLDFLAGS=-L/usr/lib -Wl,-rpath,/opt/usr/lib \
+		-lSDL_image -lSDL_gfx -ljpeg -lpng16 -lz -lSDL_mixer -lvorbisidec -lvorbisfile -lvorbis -lSDL \
+		-logg -lpthread -lgcc -lm -lc
 
 SOURCES=cmdline.c encoding.c err.c fileio.c help.c lxlogic.c mslogic.c play.c random.c res.c \
 		score.c series.c solution.c tworld.c unslist.c \
@@ -30,35 +20,27 @@ SOURCES=cmdline.c encoding.c err.c fileio.c help.c lxlogic.c mslogic.c play.c ra
 
 OBJECTS=$(SOURCES:.c=.o)
 EXECUTABLEPC=tworld
-EXECUTABLEGP=tworld
 
-CC=/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-gcc
-CFLAGS+=-I/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/include \
-		-I/opt/gcw0-toolchain/usr/mipsel-gcw0-linux-uclibc/sysroot/usr/include/SDL \
+CC=gcc
+CFLAGS+=-I/usr/include \
+		-I/usr/include/SDL \
+		-I/usr/include/vorbis \
+		-I/usr/include/ogg \
+		-D_GNU_SOURCE=1 \
 		-D_REENTRANT \
-		-DPLATFORM_GCW
+
+#CFLAGS+=-D_GNU_SOURCE=1 -D_REENTRANT -I/usr/include/SDL -lSDL
 
 all: 
-#	make pcversion
-#	make cleanobjs
-#	make arm=1 gpversion
-	make gpversion
-	#make gpold
+	$(MAKE) pcversion
+	$(MAKE) cleanobjs
+
 
 pcversion: $(SOURCES) $(EXECUTABLEPC)
 
 
-gpversion: $(SOURCES) $(EXECUTABLEGP)
-
-
 $(EXECUTABLEPC): $(OBJECTS) 
-	$(CC) $(LDFLAGS) $(PCLDFLAGS) $(OBJECTS) -o $@
-
-
-#$(EXECUTABLEGP): $(OBJECTS) 
-#	$(CC) $(LDFLAGS) $(GPLDFLAGS) $(OBJECTS) -o $@
-$(EXECUTABLEGP): $(OBJECTS) 
-	$(CC) $(LDFLAGS) $(OBJECTS) -o $@ $(GPLDFLAGS)
+	$(CC) $(LDFLAGS) $(PCLDFLAGS) $(OBJECTS) $(LIBS) -o $@
 
 
 .c.o:
